<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">playreadydemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pause">pause</string>
    <string name="license">license</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="debug">debug</string>

</resources>
